Mon Dec 10 23:26:25 CET 2012  John Tytgat  <John.Tytgat@aaug.net>

	src:
	* m_cpumem.c (dstmem): Add HALFWORD attribute suggestion.
	(LdrStrEx): Likewise.
	* area.h (AREA_*): Update comments.

	unittests/compare/core:
	* instr_clrex_ldrex_strex.s: Add HALFWORD area attribute.
	* load_literal_basic.s: Likewise.
	* loadstore_ual.s: Likewise.
	* loadstore.s: Likewise.
	* loadstore2.s: Likewise.

Sat Dec  1 15:45:58 CET 2012  John Tytgat  <John.Tytgat@aaug.net>

	src:
	* directive_data.c (c_dcfh): Add.
	* directive_data.h (c_dcfh): Likewise.
	* put.c (FloatToHalf): Add.
	(Put_FloatDataWithOffset): Add support for size 2.
	* targetcpu.c (oFPUList): Fix comment.
	* filestack.c (FS_PopPObject): Use assert i.s.o. errorAbort.
	* decode.c (oDecodeTable): Add DCFH entry.

	* unittests/compare/core/directive_data_fp2.s: Add.

Sun Nov 11 21:09:34 CET 2012  John Tytgat  <John.Tytgat@aaug.net>

	* src/decode.c (oDecodeTable): Fix formatting.

Sun Nov 11 20:57:00 CET 2012  John Tytgat  <John.Tytgat@aaug.net>

	src:
	* lex.c (Lex_None, Lex_Bool, Lex_Int, Lex_Float, Lex_String): Add.
	Use those.
	(Lex_Id): Renamed from lexTempLabel.
	(Lex_GetInt): Rename to Lex_GetIntOrFloat and support more floating
	point notations.
	(Lex_GetFloatFloatingPointLiteral, Lex_GetDoubleFloatingPointLiteral):
	Return result instead of modifying argument.
	(Lex_GetDoubleFloatingPointLiteral): Support area VFP bit.
	* area.c, lit.c, local.c, predef_reg.c, variables.c, lex.h: Follow
	lexTempLabel rename to Lex_Id.
	* m_fpe.c (CheckFPUsageIsAllowed): Add check on SoftFPA.
	* eval.c (GetInt): Exclude register list.
	(evalBinop, evalUnop): Make use of Value_Int, Value_Float.
	(Eval_NegValue): Set integer type.
	* os.c (ASFile_Create): Add argument cast to isxdigit.
	* input.c: Use unsigne char i.s.o. char.
	* directive_data.c (DefineReal): Add check on FPU None.

	unittests/compare:
	* core/directive_data_fp.s: Add more floating-point notations.
	Add AREA VFP case.
	* bin.s: Rename to...